# evnx

./: .env.backup  .env.example  .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PYPI_PUBLISHING_CHECKLIST.md  README.md  clippy-report.txt  doctor_how_to.md  evnx-output.md  getting_started.md  pypi-readme.md  pyproject.toml  similar_products.txt  tarpaulin-report.html  todo.md  validate_user_guide.md
.envx/: placeholders.json
.github/workflows/: npm-publish.yml  publish-action.yml  python-publish.yml  release.yml  scoop-update.yml  winget-first-submit.yml  winget-publish.yml
backup-code/: diff-backup.rs  scan-backup.rs  sync-backup-working-2.rs  template-backup.rs  validate-backup.rs  validate-backup2.rs
benches/: cli_benchmarks.rs
docs/: GETTING_STARTED.md
manifests/u/urwithajit9/evnx/0.3.7/: urwithajit9.evnx.installer.yaml  urwithajit9.evnx.locale.en-US.yaml  urwithajit9.evnx.yaml
reports/coverage/: cobertura.xml  tarpaulin-report.html
scripts/: install.sh  test.sh
src/: cli.rs  docs.rs  lib.rs  main.rs
src/assets/: schema.json
src/commands/: backup.rs  convert.rs  diff.rs  doctor-backup2.rs  doctor-backup3.rs  doctor.rs  init-backup.rs  init.rs  migrate.rs  mod.rs  restore.rs  scan.rs  sync-backup.rs  template.rs
src/commands/add/: blueprint.rs  custom.rs  framework.rs  mod.rs  service.rs  shared.rs
src/commands/backup/: core.rs  error.rs  mod.rs
src/commands/doctor/: mod.rs  runner.rs  types.rs
src/commands/init/: architect.rs  blank.rs  blueprint.rs  mod.rs  shared.rs
src/commands/migrate/: destination.rs  filtering.rs  mod.rs  sources.rs
src/commands/migrate/destinations/: aws.rs  azure.rs  doppler.rs  gcp.rs  github.rs  heroku.rs  infisical.rs  mod.rs  railway.rs  vercel.rs
src/commands/restore/: core.rs  error.rs  mod.rs  source.rs
src/commands/scan/: detector.rs  filters.rs  mod.rs  models.rs  output.rs  runner.rs
src/commands/sync/: executor.rs  mod.rs  models.rs  placeholder.rs  security.rs
src/commands/validate/: checks.rs  fixer.rs  mod.rs  types.rs
src/config/: mod.rs  registry.rs
src/core/: config.rs  converter.rs  gitignore.rs  mod.rs  parser.rs
src/formats/: aws.rs  azure.rs  docker.rs  doppler.rs  gcp.rs  github.rs  heroku.rs  json.rs  kubernetes.rs  railway.rs  shell.rs  terraform.rs  vercel.rs  yaml.rs
src/generators/: env_var.rs  mod.rs  template.rs
src/generators/service/: aws_s3.rs  mod.rs  mongodb.rs  openai.rs  postgresql.rs  redis.rs  sendgrid.rs  sentry.rs  stripe.rs  twilio.rs
src/generators/stack/: go.rs  mod.rs  nodejs.rs  other.rs  php.rs  python.rs  ruby.rs  rust.rs
src/schema/: formatter.rs  loader.rs  mod.rs  models.rs  query.rs  resolver.rs
src/utils/: dotenv_validation.rs  file_ops.rs  file_permissions.rs  fs.rs  git.rs  mod.rs  patterns.rs  string.rs  ui.rs
tests/: add_integration.rs  doctor_integration.rs  init_compat.rs  init_integration.rs  migrate_integration.rs  scan_integration.rs  schema_integration.rs  schema_unit.rs  sync_integration.rs  tests.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/integration/: tests.rs
