[package]
name        = "evnx"
version     = "0.3.6"
edition     = "2021"
authors     = ["Ajit Kumar <ajitkumar.pu@gmail.com>"]
description = "A comprehensive CLI tool for managing .env files — validation, secret scanning, and format conversion"
repository  = "https://github.com/urwithajit9/evnx"
homepage    = "https://evnx.dev"
documentation = "https://evnx.dev"
keywords    = ["env", "dotenv", "secrets", "cli", "devops"]
categories  = ["command-line-utilities", "development-tools"]
license     = "MIT"
readme      = "README.md"

[[bin]]
name = "evnx"
path = "src/main.rs"

[lib]
name = "evnx"
path = "src/lib.rs"

# ─── Dependencies ─────────────────────────────────────────────────────────────

[dependencies]

# CLI framework
clap          = { version = "4",    features = ["derive", "cargo", "env"] }
clap_complete = "4"

# Data structures
indexmap = { version = "2.1", features = ["serde"] }

# Interactive prompts
dialoguer = "0.11"

# Terminal output
console   = "0.15"
colored   = "2"

# Progress bars — used in utils/ui.rs and migrate/destinations/github.rs;
# always compiled so both call-sites can import without a feature gate.
indicatif = "0.17"

# Serialization
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml       = "0.8"

# Base64 — used in core/converter.rs (convert command) and github.rs (encryption);
# always compiled for the same reason as indicatif above.
base64 = "0.22"

# Core utilities
tempfile   = "3.10"
regex      = "1"
lazy_static = "1.4"
dotenvy    = "0.15"
chrono     = "0.4"
glob       = "0.3"
walkdir    = "2"
dirs       = "5"
atty = "0.2"

# Error handling
anyhow    = "1"
thiserror = "1"

# Zeroize is always compiled (used in backup structs even without the backup feature)
zeroize = { version = "1.7", features = ["derive"] }

# ── migrate feature ───────────────────────────────────────────────────────────
# base64 and indicatif are already always-on above, so only reqwest and
# crypto_box (sealed-box encryption for GitHub) are optional here.
# replaced "rustls-tls" with "rustls-tls-native-roots" which pulls ring and that was creating cross compilation issues, again, native-tls
# reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking"], optional = true }
# reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "blocking"], optional = true }
# reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored", "blocking"], optional = true }
# Cargo.toml — back to rustls, ring is no longer in the tree
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"], optional = true }
crypto_box = { version = "0.9",  features = ["std"],                                                      optional = true }

# ── backup feature ────────────────────────────────────────────────────────────
aes-gcm = { version = "0.10", optional = true }
argon2  = { version = "0.5",  optional = true }
rand    = { version = "0.10", optional = true }

# ─── Dev / build dependencies ─────────────────────────────────────────────────

[dev-dependencies]
assert_cmd         = "2"
predicates         = "3"
serde_json         = "1.0"
tempfile           = "3"
pretty_assertions  = "1"
serial_test        = "3.0"

[build-dependencies]
serde_json = "1.0"

# ─── Features ────────────────────────────────────────────────────────────────

[features]
default = []
migrate = ["dep:reqwest", "dep:crypto_box"]
backup  = ["dep:aes-gcm", "dep:argon2",  "dep:rand"]
full    = ["migrate", "backup"]

# ─── Build profiles ──────────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0